Popup: Fix horizontal scrollbar in Chrome

--- a/options/options.css
+++ b/options/options.css
@@ -17,6 +17,7 @@ body {
   min-width: 480px;
   max-width: 800px;
   width: max-content;
+  overflow-x: hidden;
 }
 
 @supports (-moz-appearance:none) {
